Replace byanshuman with ANSHUMAN YADAV in portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HR Professional Portfolio - Byanshuman</title>
+    <title>HR Professional Portfolio - ANSHUMAN YADAV</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">Byanshuman</div>
+            <div class="logo">ANSHUMAN YADAV</div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Byanshuman</h1>
+            <h1>Hi, I'm ANSHUMAN YADAV</h1>
             <p>HR Professional | HRMS Specialist | MBA in HR/OB | Python Developer</p>
             <p class="subtitle">Passionate about Human Resource Management, HRMS Systems, and Organizational Behavior</p>
             <div class="hero-buttons">
@@ -73,7 +73,7 @@
                         <span class="tag">Database</span>
                         <span class="tag">HR</span>
                     </div>
-                    <a href="https://github.com/Byanshuman/HRM-System-Python" target="_blank" class="project-link">View on GitHub</a>
+                    <a href="https://github.com/ANSHUMAN YADAV/HRM-System-Python" target="_blank" class="project-link">View on GitHub</a>
                 </div>
 
                 <div class="project-card">
@@ -206,10 +206,10 @@
                 <div class="contact-info">
                     <h3>Connect With Me</h3>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/byanshuman" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/ANSHUMAN YADAV" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i> LinkedIn
                         </a>
-                        <a href="https://github.com/Byanshuman" target="_blank" class="social-link">
+                        <a href="https://github.com/ANSHUMAN YADAV" target="_blank" class="social-link">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                         <a href="mailto:your.email@example.com" class="social-link">
@@ -224,7 +224,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Byanshuman. All rights reserved. | HR Professional | HRMS Specialist | MBA Student</p>
+            <p>&copy; 2025 ANSHUMAN YADAV. All rights reserved. | HR Professional | HRMS Specialist | MBA Student</p>
             <div class="footer-links">
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
