--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#featured">Portfolio</a></li>
+                <li><a href="strategy.html" style="color: #000320; font-weight: 700;">My Strategy</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="resume.html" target="_blank">Resume</a></li>
+                <li><a href="blog.html">Insights</a></li>
             </ul>
             <button class="theme-toggle" id="theme-toggle"><i class="fas fa-moon"></i></button>
         </div>
@@ -229,7 +231,7 @@
                     <div class="tool-icon"><i class="fab fa-python"></i></div>
                     <h3>HRM System (Python)</h3>
                     <p>A backend HR Management System developed using Flask and SQLAlchemy. Features include Payroll processing, Leave management, and secure Employee Authentication with JWT.</p>
-                    <a href="https://github.com/byanshuman/HRM-System-Python" target="_blank" class="tool-link">View Code on GitHub &rarr;</a>
+                    <a href="project-hris.html" class="tool-link">View Architecture & Case Study &rarr;</a>
                 </div>
 
                 <div class="tool-card">
