--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         const formMessage = document.getElementById('formMessage');
         
         // REPLACE THIS WITH YOUR GOOGLE APPS SCRIPT WEB APP URL
-        const GOOGLE_SCRIPT_URL = https://script.google.com/macros/s/AKfycbxUpaxhjXTaqnv9vT1swB3hviM2xGn0NyQd9zcmYs3bNugLVQkIBVwKuX-yFufw1J5MTQ/exec;
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxUpaxhjXTaqnv9vT1swB3hviM2xGn0NyQd9zcmYs3bNugLVQkIBVwKuX-yFufw1J5MTQ/exec';
 
         contactForm.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -480,3 +480,4 @@
     </script>
 </body>
 </html>
+
